Download files using electron API
